update readme and add jar