@@ -1,2 +1,6 @@
 # ac0622
-simple project
+vscode project
+inputs will be sanitized as you enter them
+follow on screen prompts
+chose to hardcode the values, but a more extensible solution would be to use a xml file or database
+to run the jar, navigate to the jar directory and run the command "java -jar --enable-preview ac0622.jar"
